# FAF

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: seed_map_urls.txt
scripts/: generate_test_scmap.py  smoke-test.sh
src/python/faf/: __init__.py
src/python/faf/api/: __init__.py  auth.py  client.py
src/python/faf/cli/: __init__.py  main.py
src/python/faf/downloader/: __init__.py  bulk.py  maps.py
src/python/faf/parser/: __init__.py  scmap.py  terrain_types.py
src/python/faf/preprocessing/: __init__.py  dataset.py  normalize.py  stats.py  validate.py
tests/fixtures/: test_5km_minimal.scmap
tests/python/api/: test_auth.py  test_client.py  test_client_integration.py
tests/python/cli/: test_main.py
tests/python/downloader/: __init__.py  test_bulk.py  test_bulk_integration.py  test_maps.py  test_maps_integration.py
tests/python/parser/: test_scmap.py  test_terrain_types.py
tests/python/preprocessing/: test_dataset.py  test_normalize.py  test_stats.py  test_validate.py
tickets/: 001-docker-setup.md  002-scmap-parser.md  003-map-download-utility.md  004-cli-integration.md  005-map-api-discovery.md  006-map-downloader.md  007-extended-scmap-parser.md  008-dataset-preprocessor.md  009-data-validation-stats.md  010-faf-oauth.md  README.md  SPRINT-02.md  TODO.md  sprint-01.md
